# aocpy

./: README.md  pyproject.toml
aocpy/: __main__.py  base.py  settings.py
aocpy/solutions/: __init__.py
aocpy/solutions/2021/: binary_diagnostic.py  dive.py  giant_squid.py  hydrothermal_venture.py  lanternfish.py  sonar_sweep.py  the_treachery_of_whales.py
aocpy/solutions/2022/: beacon_exclusion_zone.py  calorie_counting.py  camp_cleanup.py  distress_signal.py  hill_climbing.py  monkeys.py  no_space_left.py  proboscidea_volcanium.py  rathode_ray_tube.py  regolith_reservoir.py  rock_paper_scissors.py  rope_bridge.py  rucksize_reorganize.py  supply_stacks.py  treetop_house.py  tuning_trouble.py
aocpy/utils/: vec2.py
