[tool.poetry]
name = "aocpy"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.4.0"
typer = {version = "^0.7.0", extras = ["all"]}
pydantic = {version = "^1.10.2", extras = ["dotenv"]}
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
isort = "^5.11.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["aocpy",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
